--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
 <body>
@@ -22,7 +23,19 @@
                 <a href="#">header link three</a>
             </div>
         </div>
-        <!--  -->
+        <!-- HEADER MAIN -->
+        <div class="header-main-container">
+            <!-- LEFT CONTAINER -->
+            <div class="header-main-left-container">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here udner the main title. It's a smaller font and the color id lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <!-- RIGHT CONTAINER -->
+            <div class="header-main-right-container">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
     </header>
 </body>
 </html>
